--- a/src/components/ProfilModal.css
+++ b/src/components/ProfilModal.css
@@ -1,3 +1,9 @@
 /* .modal-header, .modal-body, .modal-footer {
     background-color: black;
 } */
+
+.avatar {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+}
