feat: remplacement de Link par Navlink et ajout du CSS pour les liens actifs et les liens au survol

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,3 +7,14 @@ body {
 h1, h2, h3, h4, h5, h6, strong {
   font-weight: 600;
 }
+
+
+/* Navlink */
+.navbar-nav .nav-link.active {
+    font-weight: 600;
+    text-decoration: underline;
+}
+
+.navbar-nav .nav-link:hover {
+    text-decoration: underline;
+}
