--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,3 +19,9 @@ h1, h2, h3, h4, h5, h6, strong {
     text-decoration: underline;
 }
 
+/* Footer */
+
+.social-icon a:hover {
+    color: white !important;
+}
+
